--- a/package.json
+++ b/package.json
@@ -10,14 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
+    "@headlessui/tailwindcss": "^0.2.0",
+    "@material-tailwind/react": "^2.1.9",
+    "@popperjs/core": "^2.11.8",
+    "@remixicon/react": "^4.2.0",
+    "@tremor/react": "^3.16.0",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "sweetalert2": "^11.10.7"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
